syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.interledger.spsp.server.grpc";
package org.interledger.stream.proto;

message CreateAccountRequest {
    // Username
    string account_id = 1;

    string asset_code = 2;

    int32 asset_scale = 3;

    string description = 4;

    // No need to authenticate user in Hermes, just need jwt to set up accounts
    string jwt = 5;
}


